--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -3,6 +3,7 @@
 {% set show_upload = true %}
 {% set show_dashboard = true %}
 {% set show_manual = true %}
+{% set show_edit = true %}
 {% block title %}Admin ManageExam{% endblock %}
 {% block head_title %}<h2>Manage Exam</h2>{% endblock %}
 
@@ -148,6 +149,18 @@
     </div>
 </form>
 {% endblock %}
+
+{% block edit_section %}
+<!-- Edit Form -->
+<form id="editForm" action="{{ url_for('admin_manageExam') }}" method="POST">
+    <div id="editSection" style="width: 90%; margin:auto;">
+        <input type="hidden" name="form_type" value="edit">
+        <div class="form-left" style="width: 100%">
+        </div>
+    </div>
+</form>
+{% endblock %}
+
 
 
 {% block content %}
