--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -3,6 +3,7 @@
 {% set show_upload = true %}
 {% set show_dashboard = true %}
 {% set show_manual = false %}
+{% set show_edit = true %}
 {% block title %}Admin ManageTimetable{% endblock %}
 {% block head_title %}<h2>Manage Timetable</h2>{% endblock %}
 
@@ -75,6 +76,18 @@
     </div>
 </form>
 {% endblock %}
+
+{% block edit_section %}
+<!-- Edit Form -->
+<form id="editForm" action="{{ url_for('admin_manageTimetable') }}" method="POST">
+    <div id="editSection" style="width: 90%; margin:auto;">
+        <input type="hidden" name="form_type" value="edit">
+        <div class="form-left" style="width: 100%">
+        </div>
+    </div>
+</form>
+{% endblock %}
+
 
 {% block content %}
 <div class="menu-section">
