--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -184,7 +184,7 @@
                 <label>Tutorial Lecturer</label>
                 <select id="editTutorialLecturer" name="tutorialLecturerSelect" required>
                     <option value="" disabled>Select Tutorial Lecturer</option>
-                </select>
+                </select><br>
 
                 <label>Course Credit Hour(s)</label>
                 <input type="number" id="editCourseHour" name="courseHour" min="1" step="1"
