--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -200,10 +200,10 @@
         <br><br>
 
         <div class="button-wrapper" style="gap: 5%;">
-            <button type="submit" name="action" value="update" style="background-color: green;">
+            <button type="submit" name="action" value="update" style="background-color: rgb(129, 236, 143);">
                 <i class="fas fa-check"></i> Update Course
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: red;" 
+            <button type="submit" name="action" value="delete" style="background-color: rgb(235, 120, 120);" 
                     onclick="return confirm('Are you sure to delete this course?')">
                 <i class="fas fa-trash"></i> Delete Course
             </button>
